--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,27 @@
+:root {
+  --negro: #000000;
+  --oscuro: #1c1c1f;
+  --semi-oscuro: #8c8c8e;
+  --app-grey: #F2F2F2;
+  --grey: rgb(242, 243, 248);
+  --azul: rgb(91, 91, 229);
+  --azul-hover: rgb(40, 40, 197);
+  --azul-fran: rgb(102, 138, 255);
+  --verde: rgb(37, 177, 121);
+  --verde-fran: rgb(177, 214, 188);
+  --rosa: rgb(181, 155, 176);
+  --lila: #8a6df1ff;
+  --laranja: rgb(84, 31, 23);
+  --amarelo: #ffc51aff; 
+  --celeste: rgba(0, 212, 255, 0.75);
+  --pastel: rgb(192, 179, 204);
+  --salmon:rgb(248, 157, 147);
+  --salmon-fume:rgb(252, 84, 66);
+  --grey-layer: rgb(224, 224, 224);
+  --grey-button: 	rgb(115, 147, 179);
+  }
+  
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,12 +29,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--grey);
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
 .favButton{
   background-color: rgba(136, 136, 136, 0.116);
   padding: 10px;
@@ -19,15 +44,63 @@ code {
   cursor: pointer;
 }
 
-h1{
+nav{
+  display: flex;
+  width: 1100px;
+  height: 100px;
+  justify-content:right;
+  align-items: center;
   text-align: center;
 }
 
-nav{
+ul{
+  display: inline-flex;
+  list-style:none ;
+  margin: 20px;
+  padding: 0px;
+  align-items: center;
+  margin: 30px 100px 30px 80px ;
+ 
+}
+
+.naoky{
   display: flex;
-  width: 80vw;
-  justify-content: flex-start;
-  padding: 1rem;
+  width: 400px;
+  align-items: center;
+  justify-content: left;
+}
+
+h3{
+  display: flex;
+  margin: 30px 20px 30px 0px ;
+
+}
+
+.logo{
+  display: flex;
+  display: flex;
+  width: 40px;
+  height: 40px;
+  margin: 10px 0px 20x 0px;
+  border-radius: 5px;
+}
+
+li{
+  margin: 10px;
+}
+
+button{
+  background-color: var(--negro);
+  color: var(--app-grey);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+h1{
+  text-align: center;
+  box-shadow: var(--semi-oscuro) 0px 2px 95px, var(--azul) 0px 5px 10px ;
+  border: 1px solid var(--azul-fran) ;
 }
 
 a{
