--- a/src/index.css
+++ b/src/index.css
@@ -85,7 +85,7 @@ h3{
   height: 40px;
   margin: 10px 0px 20x 0px;
   border-radius: 5px;
-  box-shadow: var(--semi-oscuro) 0px 2px 95px, var(--azul-hover) 0px 5px 10px ;
+  box-shadow: var(--semi-oscuro) 0px 2px 95px, var(--salmon) 0px 9px 30px ;
   border: 1px solid var(--azul-fran) ;
 }
 
