Agrego Fetch a GlobalContex

--- a/src/index.css
+++ b/src/index.css
@@ -7,13 +7,14 @@
   --azul: rgb(91, 91, 229);
   --azul-hover: rgb(40, 40, 197);
   --azul-fran: rgb(102, 138, 255);
+  --button-favs: rgba(136, 136, 136, 0.116);
   --verde: rgb(54, 225, 157);
   --verde-fran: rgb(177, 214, 188);
   --verde-hover: rgb(161, 177, 73);
   --rosa: rgb(181, 155, 176);
   --lila: #8a6df1ff;
   --laranja: rgb(84, 31, 23);
-  --amarelo: #ffc51aff; 
+  --amarelo: rgb(247, 228, 172); 
   --celeste: rgba(0, 212, 255, 0.75);
   --pastel: rgb(192, 179, 204);
   --salmon:rgb(248, 157, 147);
@@ -40,7 +41,7 @@ code {
 }
 
 .favButton{
-  background-color: rgba(136, 136, 136, 0.116);
+  background-color: var(--button-favs);
   padding: 10px;
   border: none;
   width: 100%;
@@ -85,7 +86,7 @@ h3{
   height: 40px;
   margin: 10px 0px 20x 0px;
   border-radius: 5px;
-  box-shadow: var(--semi-oscuro) 0px 2px 95px, var(--salmon) 0px 9px 30px ;
+  box-shadow: var(--semi-oscuro) 0px 2px 95px, var(--amarelo) 0px 9px 30px ;
   border: 1px solid var(--azul-fran) ;
 }
 
@@ -101,7 +102,7 @@ button{
   cursor: pointer;
   width: 50px;
   height: 30px;
-  box-shadow: var(--semi-oscuro) 0px 2px 95px, var(--salmon) 0px 9px 30px ;
+  box-shadow: var(--semi-oscuro) 0px 2px 95px, var(--amarelo) 0px 9px 30px ;
   border: 1px solid var(--azul-fran) ;
 }
 
@@ -117,6 +118,9 @@ button{
 }
 
 h1{
+  font-size: 40px;
+  margin: 50px auto;
+  padding: 20px;
   text-align: center;
   box-shadow: var(--semi-oscuro) 0px 2px 95px, var(--salmon) 0px 9px 30px ;
   border: 1px solid var(--azul-fran) ;
@@ -245,7 +249,6 @@ tr:nth-child(even) {
 .dark > a {
   color: white;
 }
-
 
 footer {
   display: flex;
