--- a/src/index.css
+++ b/src/index.css
@@ -199,28 +199,60 @@ form {
   transform: scale(1);
 }
 
+.card-body{
+  display: flex;
+  width: 0;
+ justify-content: center;
+}
+
 .card{
   display: flex;
-  justify-content: space-around;
   flex-direction: column;
-  align-items: center;
-  width: 200px;
-  padding: 0.5rem 0.5rem 0 0.5rem;
-  border: 0.5px solid rgb(136, 136, 136);
+  text-align:center;
+  align-items:center;
+  opacity: 1;
+  filter: contrast(110%);
+  width: 300px;
+  height: 300px;
+  margin: 20px;
+  padding: 0px 10px 0px 10px;
+  border: 3px solid rgb(136, 136, 136);
 }
 
 .card:hover{
-  border: 0.5px solid rgb(206, 217, 142);
+  border: 1px solid rgb(206, 217, 142);
 }
 
 .card-grid{
   display: flex;
-  justify-content: space-evenly;
-  gap: 1rem;
-  width: 90vw;
+  width: 90%;
   height: auto;
-  flex-wrap: wrap;
-  margin: 0 auto;
+  margin: 5%;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  box-shadow: var(--semi-oscuro) 0px 2px 95px, var(--azul) 0px 5px 20px ;
+  border: 2px solid var(--app-grey) ;
+  border-radius: 8px;
+}
+
+.img-card{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 200px;
+  height: auto ;
+  margin: 15px 20px 5px 5px;
+  border-radius: 10px;
+}
+
+.card-h3{
+ margin: 5px 5px 5px 5px;
+}
+
+.card-h4{
+  margin: 5px 5px 20px 5px;
 }
 
 table {
